# game_of_life

./: .gitignore  .travis.yml  Cargo.toml  LICENSE_MIT  README.md  bootstrap.js  package.json  webpack.config.js
src/: app.rs  basic.frag  lib.rs  lib.rs~  life.frag  life.rs  life.vert
src/patterns/conway/: homer.rle
src/patterns/day_and_night/: p200_oscillator.rle
src/patterns/life_without_death/: c3_ladder.rle  c4_ladder.rle
src/patterns/live_free_or_die/: misc.rle
src/patterns/seeds/: misc.rle
static/: index.html  styles.css
tests/: web.rs
www/: index.html  index.js  package.json
