[package]
name = "conk"
version = "0.3.0"
authors = ["Jonathan Stites <mail@jonstites.com>"]
edition = "2018"
readme = "README.md"
documentation = "https://github.com/jonstites/game_of_life"
homepage = "https://github.com/jonstites/game_of_life"
repository = "https://github.com/jonstites/game_of_life"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
js-sys = "0.3"
yew = { version = "0.14.3", features = ["web_sys"] }
wasm-bindgen = "0.2.60"
web-sys = {version = "0.3.37", features = [
    'CanvasRenderingContext2d',
    'DomRect',
    'Element',
    'HtmlCanvasElement',
    'HtmlElement',
    'TouchEvent',
    'TouchList',
    'Touch',
    'WebGlBuffer', 'WebGlProgram', 'WebGl2RenderingContext',
    'WebGlShader', 'WebGlUniformLocation', 'WebGlContextAttributes'
]}
fnv = "1.0.6"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.10"

[profile.release]
# Tell `rustc` to optimize for speed
opt-level = 3

[profile.bench]
opt-level = 3

[package.metadata.wasm-pack.profile.release]
# odd failures with webpack
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false